--- a/app/src/main/res/layout/activity_add_recipe_details.xml
+++ b/app/src/main/res/layout/activity_add_recipe_details.xml
@@ -57,15 +57,23 @@
         android:layout_height="wrap_content"
         android:hint="Enter the instructions of the recipe"
         android:id="@+id/etInstructions"/>
-    <Button
+    <LinearLayout
+        android:layout_gravity="center"
+        android:gravity="center"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Save"
+        android:orientation="horizontal">
+    <ImageView
+        android:layout_width="60dp"
+        android:layout_height="60dp"
+        android:src="@drawable/save"
+        android:layout_marginRight="10dp"
         android:id="@+id/btSave"/>
-    <Button
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="View"
+    <ImageView
+        android:layout_width="60dp"
+        android:layout_height="60dp"
+        android:src="@drawable/view"
         android:id="@+id/btView"
         />
+    </LinearLayout>
 </LinearLayout>
