--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,45 +8,49 @@
     android:orientation="vertical"
     tools:context=".MainActivity">
 
+    <TextView
+        android:id="@+id/tvTitle"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:fontFamily="casual"
+        android:text="Recipes"
+       android:textStyle="bold"
+        android:textSize="40dp"
+        android:gravity="center"
+
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rvMain"
         android:layout_width="match_parent"
         android:layout_height="0dp"
+        android:layout_margin="20dp"
+        app:layout_constraintBottom_toTopOf="@+id/llAddNewRecipe"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintBottom_toTopOf="@+id/llAddNewRecipe"/>
+        app:layout_constraintTop_toBottomOf="@+id/tvTitle" />
 
     <LinearLayout
         android:id="@+id/llAddNewRecipe"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@drawable/round_layout"
         android:layout_margin="20dp"
-        android:layout_gravity="center"
-        android:gravity="center"
+
+        android:gravity="right"
         android:orientation="horizontal"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent">
 
         <ImageView
+            android:id="@+id/ivAddNewRecipe"
+            android:layout_width="60dp"
+            android:layout_height="60dp"
+            android:src="@drawable/add" />
 
-            android:id="@+id/btAddNewUser"
-            android:layout_width="50dp"
-            android:layout_height="50dp"
-            android:src="@drawable/recipe" />
 
-        <TextView
-            android:id="@+id/tvAddNewRecipe"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:fontFamily="casual"
-            android:gravity="center"
-            android:text="Add new recipe"
-            android:textColor="#ff3300"
-            android:textSize="30dp" />
     </LinearLayout>
 
 
