--- a/app/src/main/res/layout/item_row.xml
+++ b/app/src/main/res/layout/item_row.xml
@@ -2,22 +2,42 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_marginLeft="10dp"
+    android:layout_marginBottom="10dp"
+    android:background="@drawable/round_layout"
+    android:backgroundTint="#b3e0ff"
     android:orientation="vertical">
 
-    <TextView
-        android:id="@+id/tvTitle"
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:fontFamily="casual"
-        android:gravity="left"
-        android:text="Title"
-        android:textSize="24dp"
         android:layout_marginLeft="10dp"
         android:layout_marginRight="10dp"
-        android:textStyle="bold" />
+        android:orientation="horizontal"
+        android:weightSum="3">
 
+        <TextView
+            android:id="@+id/tvTitle"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_marginLeft="10dp"
+            android:layout_marginRight="10dp"
+            android:layout_weight="2"
+            android:fontFamily="casual"
+            android:gravity="left"
+            android:text="Title"
+            android:textColor="#434141"
+            android:textSize="24dp"
+            android:textStyle="bold" />
+
+        <ImageView
+            android:id="@+id/ivSettings"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:layout_weight="1"
+            android:src="@drawable/settings" />
+
+    </LinearLayout>
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -31,8 +51,8 @@
         <ImageView
             android:layout_width="60dp"
             android:layout_height="60dp"
-            android:layout_weight="1"
             android:layout_marginRight="5dp"
+            android:layout_weight="1"
             android:src="@drawable/chef" />
 
         <TextView
@@ -40,8 +60,8 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:fontFamily="casual"
             android:layout_weight="1"
+            android:fontFamily="casual"
             android:text="Author"
             android:textSize="20dp" />
     </LinearLayout>
@@ -59,17 +79,17 @@
         <ImageView
             android:layout_width="60dp"
             android:layout_height="60dp"
-            android:layout_weight="1"
             android:layout_marginRight="5dp"
+            android:layout_weight="1"
             android:src="@drawable/ingredients" />
 
         <TextView
             android:id="@+id/tvIngredients"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_gravity="center"
             android:layout_weight="1"
             android:fontFamily="casual"
-            android:layout_gravity="center"
             android:text="Ingredients"
             android:textSize="20dp" />
     </LinearLayout>
@@ -89,18 +109,17 @@
             android:layout_marginRight="5dp"
             android:layout_weight="1"
             android:src="@drawable/info" />
+
         <TextView
             android:id="@+id/tvInstructions"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_gravity="center"
             android:layout_weight="1"
             android:fontFamily="casual"
-            android:layout_gravity="center"
             android:text="Instructions"
             android:textSize="20dp" />
     </LinearLayout>
-
-
 
 
 </LinearLayout>
